--- a/HousingRate.ipynb
+++ b/HousingRate.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HousingRate.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/abJL+q5JRUO6YG3ztGnE",
+      "authorship_tag": "ABX9TyPOOCCOy47uIklsxRVtGiYC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,124 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BHexQczJILch"
+        "id": "BHexQczJILch",
+        "outputId": "3f6a2571-9dec-4e8f-dd20-6f393a2a2fe9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!git clone https://github.com/emanhamed/Houses-dataset.git"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Houses-dataset'...\n",
+            "remote: Enumerating objects: 2166, done.\u001b[K\n",
+            "remote: Counting objects: 100% (1/1), done.\u001b[K\n",
+            "remote: Total 2166 (delta 0), reused 0 (delta 0), pack-reused 2165\u001b[K\n",
+            "Receiving objects: 100% (2166/2166), 176.26 MiB | 10.91 MiB/s, done.\n",
+            "Resolving deltas: 100% (20/20), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eXF9_gvDbgRB",
+        "outputId": "87a75573-c0b7-4dc5-db8c-d92950fd0dc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pip install requests"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (2.23.0)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests) (2021.5.30)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests) (3.0.4)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RW9gvjQCbusT"
+      },
+      "source": [
+        "import requests\n",
+        "# Save datagenerators as file to colab working directory\n",
+        "# If you are using GitHub, make sure you get the \"Raw\" version of the code\n",
+        "url = 'https://raw.githubusercontent.com/sahupra1357/HousingRateRegression/main/pyimagesearch/datasets.py'\n",
+        "r = requests.get(url)\n",
+        "\n",
+        "# make sure your filename is the same as how you want to import \n",
+        "with open('datasets.py', 'w') as f:\n",
+        "    f.write(r.text)\n",
+        "\n",
+        "url = 'https://raw.githubusercontent.com/sahupra1357/HousingRateRegression/main/pyimagesearch/models.py'\n",
+        "r = requests.get(url)\n",
+        "\n",
+        "# make sure your filename is the same as how you want to import \n",
+        "with open('models.py', 'w') as f:\n",
+        "    f.write(r.text)\n",
+        "\n",
+        "import datasets\n",
+        "import models"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XagU_Po6buos"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KzURE_uMbumO"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7apFNHQ_bujb"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x2UHYlnrbugz"
       },
       "source": [
         ""
