--- a/HousingRateGraph.ipynb
+++ b/HousingRateGraph.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HousingRateGraph.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOSy408qoCyI73B/xD0EBkg",
+      "authorship_tag": "ABX9TyO2F0hdzZ7/Stv+rZT+PcxQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
       "source": [
         "!git clone https://github.com/emanhamed/Houses-dataset.git"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,7 +67,7 @@
       "source": [
         "!pip install requests"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "import datasets\n",
         "import models"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "import locale\n",
         "import os"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
         "inputPath = os.path.sep.join([\"Houses-dataset/Houses Dataset\", \"HousesInfo.txt\"])\n",
         "df = datasets.load_house_attributes(inputPath)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,10 +158,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "VD5kuc1Tt6ac",
-        "outputId": "0f7834a5-1efb-4ff6-cecd-5b040e20c9df",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0f7834a5-1efb-4ff6-cecd-5b040e20c9df"
       },
       "source": [
         "# construct a training and testing split with 75% of the data used\n",
@@ -169,7 +169,7 @@
         "print(\"[INFO] constructing training/testing split...\")\n",
         "(train, test) = train_test_split(df, test_size=0.25, random_state=42)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,17 +193,17 @@
         "trainY = train[\"price\"] / maxPrice\n",
         "testY = test[\"price\"] / maxPrice"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "bIO6GrlFt6Uk",
-        "outputId": "4cf5e814-a1ad-4048-9e1c-e31f7ac8400b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4cf5e814-a1ad-4048-9e1c-e31f7ac8400b"
       },
       "source": [
         "# process the house attributes data by performing min-max scaling\n",
@@ -212,7 +212,7 @@
         "print(\"[INFO] processing data...\")\n",
         "(trainX, testX) = datasets.process_house_attributes(df, train, test)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,26 +237,26 @@
         "opt = Adam(learning_rate=1e-3, decay=1e-3 / 200)\n",
         "model.compile(loss=\"mean_absolute_percentage_error\", optimizer=opt)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4d9yWkXnt6Oz",
-        "outputId": "4001870e-24a2-4f3b-fa54-0a11ab8c8173",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4001870e-24a2-4f3b-fa54-0a11ab8c8173"
       },
       "source": [
         "# train the model\n",
         "print(\"[INFO] training model...\")\n",
-        "model.fit(x=trainX, y=trainY, \n",
+        "regression_hist = model.fit(x=trainX, y=trainY, \n",
         "\tvalidation_data=(testX, testY),\n",
         "\tepochs=200, batch_size=8)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,18 +680,39 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "r4rINZTp8tko"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "plt.figure(figsize=(16,10)) \n",
+        "epochs = range(1, len(regression_hist.history['accuracy']) + 1)\n",
+        "plt.plot(epochs, regression_hist.history['loss'], label='Training Loss') \n",
+        "plt.plot(epochs, regression_hist.history['val_loss'], label='Validation Loss') \n",
+        "\n",
+        "plt.title('Loss of Regression model')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "f7XdGitst6L8",
-        "outputId": "fe779859-561b-4399-ebcc-ebf1ce4066e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fe779859-561b-4399-ebcc-ebf1ce4066e6"
       },
       "source": [
         "# make predictions on the testing data\n",
         "print(\"[INFO] predicting house prices...\")\n",
         "preds = model.predict(testX)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,7 +736,7 @@
         "percentDiff = (diff / testY) * 100\n",
         "absPercentDiff = np.abs(percentDiff)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -729,17 +750,17 @@
         "mean = np.mean(absPercentDiff)\n",
         "std = np.std(absPercentDiff)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "B3JGK60OvSXM",
-        "outputId": "a9215085-ae54-4509-a743-9a8278c5afa9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a9215085-ae54-4509-a743-9a8278c5afa9"
       },
       "source": [
         "# finally, show some statistics on our model\n",
@@ -749,7 +770,7 @@
         "\tlocale.currency(df[\"price\"].std(), grouping=True)))\n",
         "print(\"[INFO] mean: {:.2f}%, std: {:.2f}%\".format(mean, std))"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
