--- a/cnn_regressionGraph.ipynb
+++ b/cnn_regressionGraph.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cnn_regressionGraph.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNrps4LY7i+QcxCnixAGaFs",
+      "authorship_tag": "ABX9TyO31pO5Qto1/v7g2VWr0/cD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
       "source": [
         "!git clone https://github.com/emanhamed/Houses-dataset.git"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,7 +67,7 @@
       "source": [
         "!pip install requests"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
         "import datasets\n",
         "import models"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
         "import locale\n",
         "import os"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
         "inputPath = os.path.sep.join([\"Houses-dataset/Houses Dataset\", \"HousesInfo.txt\"])\n",
         "df = datasets.load_house_attributes(inputPath)\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +171,7 @@
         "images = datasets.load_house_images(df, \"Houses-dataset/Houses Dataset\")\n",
         "images = images / 255.0"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,17 +193,17 @@
         "split = train_test_split(df, images, test_size=0.25, random_state=42)\n",
         "(trainAttrX, testAttrX, trainImagesX, testImagesX) = split"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "YSMLCit6xJJF",
-        "outputId": "b31b9684-476d-449a-9822-3dea32e8074d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b31b9684-476d-449a-9822-3dea32e8074d"
       },
       "source": [
         "# find the largest house price in the training set and use it to\n",
@@ -221,11 +221,11 @@
         "model.compile(loss=\"mean_absolute_percentage_error\", optimizer=opt)\n",
         "# train the model\n",
         "print(\"[INFO] training model...\")\n",
-        "model.fit(x=trainImagesX, y=trainY, \n",
+        "cnn_hist = model.fit(x=trainImagesX, y=trainY, \n",
         "    validation_data=(testImagesX, testY),\n",
         "    epochs=200, batch_size=8)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -657,11 +657,32 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "_c1Q35p0_vws"
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "plt.figure(figsize=(16,10)) \n",
+        "epochs = range(1, len(regression_hist.history['accuracy']) + 1)\n",
+        "plt.plot(epochs, regression_hist.history['loss'], label='Training Loss') \n",
+        "plt.plot(epochs, regression_hist.history['val_loss'], label='Validation Loss') \n",
+        "\n",
+        "plt.title('Loss of Regression model')\n",
+        "plt.xlabel('Epochs')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "CZGoNXpcxJGN",
-        "outputId": "655fa809-eadf-49d7-c1e2-72b0ad0acb0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "655fa809-eadf-49d7-c1e2-72b0ad0acb0c"
       },
       "source": [
         "# make predictions on the testing data\n",
@@ -684,7 +705,7 @@
         "\tlocale.currency(df[\"price\"].std(), grouping=True)))\n",
         "print(\"[INFO] mean: {:.2f}%, std: {:.2f}%\".format(mean, std))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
